--- a/bootstrap_aws.ipynb
+++ b/bootstrap_aws.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO8zjRwIMFhZgJHCROf9Dl0",
+      "authorship_tag": "ABX9TyP04Pp7tsPA7Wu0kBK+r0Dk",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,44 +29,17 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Configure AWS"
+        "# Bootstrap AWS"
       ],
       "metadata": {
         "id": "tZLo3O5nulFP"
       }
     },
     {
-      "cell_type": "markdown",
-      "source": [
-        "## Install Dependencies"
-      ],
-      "metadata": {
-        "id": "H_2zlTikuiJn"
-      }
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "aHj6RyRPJNGN"
-      },
-      "outputs": [],
-      "source": [
-        "%%bash\n"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "## Authenticate to AWS"
-      ],
-      "metadata": {
-        "id": "hCpRahcTuqPD"
-      }
-    },
-    {
       "cell_type": "code",
       "source": [
+        "%pip install uv --quiet --progress-bar=off\n",
+        "!uv pip install --quiet --system boto3\n",
         "import os\n",
         "import textwrap\n",
         "import boto3\n",
@@ -206,9 +179,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "e01c20bb-4523-45cd-bc9f-77c593f12893"
+        "outputId": "208aafcd-f443-4282-e7b1-23d960ca4ab4"
       },
-      "execution_count": 107,
+      "execution_count": 108,
       "outputs": [
         {
           "output_type": "stream",
