--- a/final_msaai_diabetes_readmission_regression.ipynb
+++ b/final_msaai_diabetes_readmission_regression.ipynb
@@ -44,32 +44,24 @@
     {
       "cell_type": "code",
       "source": [
-        "from datasets import load_dataset\n",
         "import pandas as pd\n",
-        "import numpy as np\n",
-        "from sklearn.linear_model import SGDClassifier\n",
-        "from sklearn.metrics import accuracy_score, precision_score, recall_score, roc_auc_score\n",
-        "from sklearn.preprocessing import StandardScaler, LabelEncoder\n",
-        "from sklearn.feature_extraction import FeatureHasher\n",
-        "from sklearn.utils import shuffle\n",
-        "from sklearn.model_selection import train_test_split\n",
-        "from scipy.sparse import hstack\n",
-        "from scipy import sparse\n",
+        "\n",
         "from datasets import load_dataset\n",
-        "import pandas as pd\n",
-        "import numpy as np\n",
-        "from sklearn.model_selection import train_test_split, cross_val_score\n",
-        "from sklearn.preprocessing import OneHotEncoder, StandardScaler, PolynomialFeatures\n",
-        "from sklearn.linear_model import LogisticRegression\n",
-        "from sklearn.metrics import accuracy_score, precision_score, recall_score, roc_auc_score\n",
-        "from sklearn.pipeline import Pipeline\n",
+        "\n",
         "from sklearn.compose import ColumnTransformer\n",
-        "from sklearn.impute import SimpleImputer"
+        "from sklearn.impute import SimpleImputer\n",
+        "from sklearn.linear_model import LogisticRegression\n",
+        "from sklearn.metrics import (accuracy_score, precision_score, recall_score,\n",
+        "                             roc_auc_score)\n",
+        "from sklearn.model_selection import cross_val_score, train_test_split\n",
+        "from sklearn.pipeline import Pipeline\n",
+        "from sklearn.preprocessing import (OneHotEncoder,\n",
+        "                                   PolynomialFeatures, StandardScaler)"
       ],
       "metadata": {
         "id": "8al4jpHeW-Gb"
       },
-      "execution_count": 16,
+      "execution_count": 22,
       "outputs": []
     },
     {
@@ -82,7 +74,7 @@
       "metadata": {
         "id": "yn4bESrvW01K"
       },
-      "execution_count": 17,
+      "execution_count": 23,
       "outputs": []
     },
     {
@@ -96,7 +88,7 @@
       "metadata": {
         "id": "eIvO81IYZzPG"
       },
-      "execution_count": 18,
+      "execution_count": 24,
       "outputs": []
     },
     {
@@ -128,18 +120,18 @@
       "metadata": {
         "id": "1rA4zVCcZ3dj"
       },
-      "execution_count": 19,
+      "execution_count": 25,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 26,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "xiK3krEzsDFW",
-        "outputId": "c7b12abe-7662-4986-de6c-1eadb7db6963"
+        "outputId": "f2a50510-4314-4795-e00b-4d88b2490234"
       },
       "outputs": [
         {
@@ -212,9 +204,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "o9UCQLrRZ6Hu",
-        "outputId": "1596feca-9448-499b-ae2e-9afce5f1671a"
+        "outputId": "eac859e5-bd4b-4d1a-b6bc-8b51c0facff0"
       },
-      "execution_count": 21,
+      "execution_count": 27,
       "outputs": [
         {
           "output_type": "stream",
