--- a/notebooks/openai-text-to-speech.ipynb
+++ b/notebooks/openai-text-to-speech.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNTQNDHiJ0iRrJd2rdWVhzd",
+      "authorship_tag": "ABX9TyNn+mv7iGhFBiuVCsudacJR",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -23,16 +23,44 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/aai540-group3/project/blob/main/openai_tts.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/aai540-group3/project/blob/main/notebooks/openai-text-to-speech.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "xPQU9Z0SwoU2"
+        "id": "xPQU9Z0SwoU2",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 593
+        },
+        "outputId": "e7afbb5b-1875-48c3-9279-25aaf5e9b47f"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Colab notebook detected. This cell will run indefinitely so that you can see errors and logs. To turn off, set debug=False in launch().\n",
+            "Running on public URL: https://862cc80eac566b17de.gradio.live\n",
+            "\n",
+            "This share link expires in 72 hours. For free permanent hosting and GPU upgrades, run `gradio deploy` from Terminal to deploy to Spaces (https://huggingface.co/spaces)\n"
+          ]
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ],
+            "text/html": [
+              "<div><iframe src=\"https://862cc80eac566b17de.gradio.live\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
+            ]
+          },
+          "metadata": {}
+        }
+      ],
       "source": [
         "# @title { display-mode: \"form\" }\n",
         "# @markdown <br />\n",
@@ -45,54 +73,274 @@
         "import gradio as gr\n",
         "import tempfile\n",
         "import openai\n",
+        "from functools import partial\n",
         "\n",
-        "def tts(input_text, model, voice, api_key):\n",
+        "def tts(\n",
+        "    input_text: str,\n",
+        "    model: str,\n",
+        "    voice: str,\n",
+        "    api_key: str,\n",
+        "    response_format: str = \"mp3\",\n",
+        "    speed: float = 1.0,\n",
+        ") -> str:\n",
+        "    \"\"\"\n",
+        "    Convert input text to speech using OpenAI's Text-to-Speech API.\n",
+        "\n",
+        "    :param input_text: The text to be converted to speech.\n",
+        "    :type input_text: str\n",
+        "    :param model: The model to use for synthesis (e.g., 'tts-1', 'tts-1-hd').\n",
+        "    :type model: str\n",
+        "    :param voice: The voice profile to use (e.g., 'alloy', 'echo', 'fable', etc.).\n",
+        "    :type voice: str\n",
+        "    :param api_key: OpenAI API key.\n",
+        "    :type api_key: str\n",
+        "    :param response_format: The audio format of the output file, defaults to 'mp3'.\n",
+        "    :type response_format: str, optional\n",
+        "    :param speed: The speed of the synthesized speech (0.25 to 4.0), defaults to 1.0.\n",
+        "    :type speed: float, optional\n",
+        "    :return: File path to the generated audio file.\n",
+        "    :rtype: str\n",
+        "    :raises gr.Error: If input parameters are invalid or API call fails.\n",
+        "    \"\"\"\n",
+        "    if not api_key.strip():\n",
+        "        raise gr.Error(\n",
+        "            \"API key is required. Get an API key at: https://platform.openai.com/account/api-keys\"\n",
+        "        )\n",
+        "\n",
+        "    if not input_text.strip():\n",
+        "        raise gr.Error(\"Input text cannot be empty.\")\n",
+        "\n",
         "    openai.api_key = api_key\n",
-        "    response = openai.audio.speech.create(\n",
-        "        input=input_text,\n",
-        "        voice=voice,\n",
-        "        model=model\n",
-        "    )\n",
-        "    with tempfile.NamedTemporaryFile(suffix=\".mp3\", delete=False) as temp_file:\n",
-        "        temp_file.write(response.content)\n",
-        "        temp_file_path = temp_file.name\n",
+        "\n",
+        "    try:\n",
+        "        # Create the audio speech object\n",
+        "        speech_file = openai.audio.speech.create(\n",
+        "            model=model,\n",
+        "            voice=voice,\n",
+        "            input=input_text,\n",
+        "            response_format=response_format,\n",
+        "            speed=speed,\n",
+        "        )\n",
+        "        # Save the audio content to a temporary file\n",
+        "        file_extension = f\".{response_format}\"\n",
+        "        with tempfile.NamedTemporaryFile(\n",
+        "            suffix=file_extension, delete=False, mode=\"wb\"\n",
+        "        ) as temp_file:\n",
+        "            temp_file_path = temp_file.name\n",
+        "            temp_file.write(speech_file.content)\n",
+        "\n",
+        "    except openai.OpenAIError as e:\n",
+        "        # Catch OpenAI exceptions\n",
+        "        raise gr.Error(f\"An OpenAI error occurred: {e}\")\n",
+        "    except Exception as e:\n",
+        "        # Catch any other exceptions\n",
+        "        raise gr.Error(f\"An unexpected error occurred: {e}\")\n",
+        "\n",
         "    return temp_file_path\n",
         "\n",
-        "model_options = [\"tts-1\", \"tts-1-hd\"]\n",
-        "voice_options = [\"alloy\", \"echo\", \"fable\", \"onyx\", \"nova\", \"shimmer\"]\n",
+        "def main():\n",
+        "    \"\"\"\n",
+        "    Main function to create and launch the Gradio interface.\n",
+        "    \"\"\"\n",
+        "    MODEL_OPTIONS = [\"tts-1\", \"tts-1-hd\"]\n",
+        "    VOICE_OPTIONS = [\"alloy\", \"echo\", \"fable\", \"onyx\", \"nova\", \"shimmer\"]\n",
+        "    RESPONSE_FORMAT_OPTIONS = [\"mp3\", \"opus\", \"aac\", \"flac\", \"wav\", \"pcm\"]\n",
+        "    VOICE_PREVIEW_FILES = {voice: f\"{voice}.wav\" for voice in VOICE_OPTIONS}\n",
         "\n",
-        "with gr.Blocks(analytics_enabled=False) as demo:\n",
-        "    with gr.Row():\n",
-        "        with gr.Column(scale=1):\n",
-        "            api_key_input = gr.Textbox(label=\"API Key\", type=\"password\")\n",
-        "            model_dropdown = gr.Dropdown(choices=model_options, label=\"Model\", value=\"tts-1-hd\")\n",
-        "            voice_dropdown = gr.Dropdown(choices=voice_options, label=\"Voice Options\", value=\"echo\")\n",
-        "        with gr.Column(scale=2):\n",
-        "            input_textbox = gr.Textbox(\n",
-        "                label=\"Input Text\",\n",
-        "                lines=10,\n",
-        "                placeholder=\"Type your text here...\"\n",
+        "    with gr.Blocks(title=\"OpenAI - Text to Speech\") as demo:\n",
+        "        with gr.Row():\n",
+        "            with gr.Column(scale=1):\n",
+        "\n",
+        "                def play_voice_sample(voice: str):\n",
+        "                    \"\"\"\n",
+        "                    Play the preview audio sample for the selected voice.\n",
+        "\n",
+        "                    :param voice: The name of the voice to preview.\n",
+        "                    :type voice: str\n",
+        "                    :return: Updated Gradio Audio component with the selected voice sample.\n",
+        "                    :rtype: gr.Audio\n",
+        "                    \"\"\"\n",
+        "                    return gr.update(\n",
+        "                        value=VOICE_PREVIEW_FILES[voice],\n",
+        "                        label=f\"Preview Voice: {voice.capitalize()}\",\n",
+        "                    )\n",
+        "\n",
+        "                with gr.Group():\n",
+        "                    # Set the default preview audio to one of the voices\n",
+        "                    default_voice = \"echo\"\n",
+        "                    preview_audio = gr.Audio(\n",
+        "                        interactive=False,\n",
+        "                        label=f\"Preview Voice: {default_voice.capitalize()}\",\n",
+        "                        value=VOICE_PREVIEW_FILES[default_voice],\n",
+        "                        visible=True,\n",
+        "                        show_download_button=True,\n",
+        "                        show_share_button=False,\n",
+        "                        autoplay=False,\n",
+        "                    )\n",
+        "\n",
+        "                    # Create buttons for each voice\n",
+        "                    for voice in VOICE_OPTIONS:\n",
+        "                        voice_button = gr.Button(\n",
+        "                            value=f\"{voice.capitalize()}\",\n",
+        "                            variant=\"secondary\",\n",
+        "                            size=\"sm\",\n",
+        "                        )\n",
+        "                        voice_button.click(\n",
+        "                            fn=partial(play_voice_sample, voice=voice),\n",
+        "                            outputs=preview_audio,\n",
+        "                        )\n",
+        "\n",
+        "            with gr.Column(scale=1):\n",
+        "                api_key_input = gr.Textbox(\n",
+        "                    label=\"OpenAI API Key\",\n",
+        "                    info=\"https://platform.openai.com/account/api-keys\",\n",
+        "                    type=\"password\",\n",
+        "                    placeholder=\"Enter your OpenAI API Key\",\n",
+        "                )\n",
+        "                model_dropdown = gr.Dropdown(\n",
+        "                    choices=MODEL_OPTIONS,\n",
+        "                    label=\"Model\",\n",
+        "                    value=\"tts-1\",\n",
+        "                    info=\"Select tts-1 for speed or tts-1-hd for quality\",\n",
+        "                )\n",
+        "                voice_dropdown = gr.Dropdown(\n",
+        "                    choices=VOICE_OPTIONS,\n",
+        "                    label=\"Voice Options\",\n",
+        "                    value=\"echo\",\n",
+        "                )\n",
+        "                response_format_dropdown = gr.Dropdown(\n",
+        "                    choices=RESPONSE_FORMAT_OPTIONS,\n",
+        "                    label=\"Response Format\",\n",
+        "                    value=\"mp3\",\n",
+        "                )\n",
+        "                speed_slider = gr.Slider(\n",
+        "                    minimum=0.25,\n",
+        "                    maximum=4.0,\n",
+        "                    step=0.05,\n",
+        "                    label=\"Voice Speed\",\n",
+        "                    value=1.0,\n",
+        "                )\n",
+        "\n",
+        "            with gr.Column(scale=2):\n",
+        "                input_textbox = gr.Textbox(\n",
+        "                    label=\"Input Text (0000 / 4096 chars)\",\n",
+        "                    lines=10,\n",
+        "                    placeholder=\"Type your text here...\",\n",
+        "                )\n",
+        "\n",
+        "                def update_label(input_text: str):\n",
+        "                    \"\"\"\n",
+        "                    Update the label of the input textbox with the current character count.\n",
+        "\n",
+        "                    :param input_text: The current text in the input textbox.\n",
+        "                    :type input_text: str\n",
+        "                    :return: Updated Gradio component with new label.\n",
+        "                    :rtype: gr.update\n",
+        "                    \"\"\"\n",
+        "                    char_count = len(input_text)\n",
+        "                    new_label = f\"Input Text ({char_count:04d} / 4096 chars)\"\n",
+        "                    return gr.update(label=new_label)\n",
+        "\n",
+        "                # Update the label when the text changes, with progress hidden\n",
+        "                input_textbox.change(\n",
+        "                    fn=update_label,\n",
+        "                    inputs=input_textbox,\n",
+        "                    outputs=input_textbox,\n",
+        "                    show_progress=\"hidden\",  # Hide the progress indicator\n",
+        "                )\n",
+        "\n",
+        "                # Initialize the submit button as non-interactive\n",
+        "                submit_button = gr.Button(\n",
+        "                    \"Enter OpenAI API Key\",\n",
+        "                    variant=\"primary\",\n",
+        "                    interactive=False,\n",
+        "                )\n",
+        "\n",
+        "                # Function to update the submit button based on API Key input\n",
+        "                def update_button(api_key):\n",
+        "                    \"\"\"\n",
+        "                    Update the submit button's label and interactivity based on the API key input.\n",
+        "\n",
+        "                    :param api_key: The current text in the API key input.\n",
+        "                    :type api_key: str\n",
+        "                    :return: Updated Gradio component for the submit button.\n",
+        "                    :rtype: gr.update\n",
+        "                    \"\"\"\n",
+        "                    if api_key.strip():\n",
+        "                        # There is an API key, enable the submit button\n",
+        "                        return gr.update(\n",
+        "                            value=\"Convert Text to Speech\", interactive=True\n",
+        "                        )\n",
+        "                    else:\n",
+        "                        # No API key, disable the submit button\n",
+        "                        return gr.update(\n",
+        "                            value=\"Enter OpenAI API Key\", interactive=False\n",
+        "                        )\n",
+        "\n",
+        "                # Update the submit button whenever the API Key input changes\n",
+        "                api_key_input.input(\n",
+        "                    fn=update_button,\n",
+        "                    inputs=api_key_input,\n",
+        "                    outputs=submit_button,\n",
+        "                )\n",
+        "\n",
+        "            with gr.Column(scale=1):\n",
+        "                output_audio = gr.Audio(\n",
+        "                    label=\"Output Audio\",\n",
+        "                    show_download_button=False,\n",
+        "                    show_share_button=False,\n",
+        "                )\n",
+        "\n",
+        "        def on_submit(\n",
+        "            input_text: str,\n",
+        "            model: str,\n",
+        "            voice: str,\n",
+        "            api_key: str,\n",
+        "            response_format: str,\n",
+        "            speed: float,\n",
+        "        ) -> str:\n",
+        "            \"\"\"\n",
+        "            Event handler for the submit button; converts text to speech using the tts function.\n",
+        "\n",
+        "            :param input_text: The text to convert to speech.\n",
+        "            :type input_text: str\n",
+        "            :param model: The TTS model to use (e.g., 'tts-1', 'tts-1-hd').\n",
+        "            :type model: str\n",
+        "            :param voice: The voice profile to use (e.g., 'alloy', 'echo', etc.).\n",
+        "            :type voice: str\n",
+        "            :param api_key: OpenAI API key.\n",
+        "            :type api_key: str\n",
+        "            :param response_format: The audio format of the output file.\n",
+        "            :type response_format: str\n",
+        "            :param speed: The speed of the synthesized speech.\n",
+        "            :type speed: float\n",
+        "            :return: File path to the generated audio file.\n",
+        "            :rtype: str\n",
+        "            \"\"\"\n",
+        "            audio_file = tts(\n",
+        "                input_text, model, voice, api_key, response_format, speed\n",
         "            )\n",
-        "            submit_button = gr.Button(\"Text-to-Speech\", variant=\"primary\")\n",
-        "        with gr.Column(scale=1):\n",
-        "            output_audio = gr.Audio(label=\"Output Audio\")\n",
+        "            return audio_file\n",
         "\n",
-        "    def on_convert_click(input_text, model, voice, api_key):\n",
-        "        return tts(input_text, model, voice, api_key)\n",
+        "        # Trigger the conversion when the submit button is clicked\n",
+        "        submit_button.click(\n",
+        "            fn=on_submit,\n",
+        "            inputs=[\n",
+        "                input_textbox,\n",
+        "                model_dropdown,\n",
+        "                voice_dropdown,\n",
+        "                api_key_input,\n",
+        "                response_format_dropdown,\n",
+        "                speed_slider,\n",
+        "            ],\n",
+        "            outputs=output_audio,\n",
+        "        )\n",
         "\n",
-        "    submit_button.click(\n",
-        "        fn=on_convert_click,\n",
-        "        inputs=[input_textbox, model_dropdown, voice_dropdown, api_key_input],\n",
-        "        outputs=output_audio\n",
-        "    )\n",
+        "    # Launch the Gradio app\n",
+        "    demo.launch(show_error=True, debug=True, share=True)\n",
         "\n",
-        "    input_textbox.submit(\n",
-        "        fn=on_convert_click,\n",
-        "        inputs=[input_textbox, model_dropdown, voice_dropdown, api_key_input],\n",
-        "        outputs=output_audio\n",
-        "    )\n",
-        "\n",
-        "demo.launch(debug=True, share=True)"
+        "if __name__ == \"__main__\":\n",
+        "    main()"
       ]
     }
   ]
