--- a/notebooks/openai-text-to-speech.ipynb
+++ b/notebooks/openai-text-to-speech.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNn+mv7iGhFBiuVCsudacJR",
+      "authorship_tag": "ABX9TyOFv/YqcStyjM645Csx8ya1",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -110,6 +110,7 @@
         "\n",
         "    return temp_file_path\n",
         "\n",
+        "\n",
         "def main():\n",
         "    \"\"\"\n",
         "    Main function to create and launch the Gradio interface.\n",
@@ -117,7 +118,32 @@
         "    MODEL_OPTIONS = [\"tts-1\", \"tts-1-hd\"]\n",
         "    VOICE_OPTIONS = [\"alloy\", \"echo\", \"fable\", \"onyx\", \"nova\", \"shimmer\"]\n",
         "    RESPONSE_FORMAT_OPTIONS = [\"mp3\", \"opus\", \"aac\", \"flac\", \"wav\", \"pcm\"]\n",
-        "    VOICE_PREVIEW_FILES = {voice: f\"{voice}.wav\" for voice in VOICE_OPTIONS}\n",
+        "\n",
+        "    # Predefine voice previews URLs\n",
+        "    VOICE_PREVIEW_URLS = {\n",
+        "        voice: f\"https://cdn.openai.com/API/docs/audio/{voice}.wav\"\n",
+        "        for voice in VOICE_OPTIONS\n",
+        "    }\n",
+        "\n",
+        "    # Download audio previews before initiating the interface\n",
+        "    PREVIEW_DIR = \"voice_previews\"\n",
+        "    os.makedirs(PREVIEW_DIR, exist_ok=True)\n",
+        "\n",
+        "    VOICE_PREVIEW_FILES = {}\n",
+        "    for voice, url in VOICE_PREVIEW_URLS.items():\n",
+        "        local_file_path = os.path.join(PREVIEW_DIR, f\"{voice}.wav\")\n",
+        "        if not os.path.exists(local_file_path):\n",
+        "            try:\n",
+        "                response = requests.get(url)\n",
+        "                response.raise_for_status()\n",
+        "                with open(local_file_path, \"wb\") as f:\n",
+        "                    f.write(response.content)\n",
+        "            except requests.exceptions.RequestException as e:\n",
+        "                print(f\"Failed to download {voice} preview: {e}\")\n",
+        "        VOICE_PREVIEW_FILES[voice] = local_file_path\n",
+        "\n",
+        "    # Set static paths for Gradio to serve\n",
+        "    gr.set_static_paths(paths=[PREVIEW_DIR])\n",
         "\n",
         "    with gr.Blocks(title=\"OpenAI - Text to Speech\") as demo:\n",
         "        with gr.Row():\n",
@@ -138,12 +164,11 @@
         "                    )\n",
         "\n",
         "                with gr.Group():\n",
-        "                    # Set the default preview audio to one of the voices\n",
-        "                    default_voice = \"echo\"\n",
+        "\n",
         "                    preview_audio = gr.Audio(\n",
         "                        interactive=False,\n",
-        "                        label=f\"Preview Voice: {default_voice.capitalize()}\",\n",
-        "                        value=VOICE_PREVIEW_FILES[default_voice],\n",
+        "                        label=\"Preview Voice: Echo\",\n",
+        "                        value=VOICE_PREVIEW_FILES[\"echo\"],\n",
         "                        visible=True,\n",
         "                        show_download_button=True,\n",
         "                        show_share_button=False,\n",
@@ -289,9 +314,7 @@
         "            :return: File path to the generated audio file.\n",
         "            :rtype: str\n",
         "            \"\"\"\n",
-        "            audio_file = tts(\n",
-        "                input_text, model, voice, api_key, response_format, speed\n",
-        "            )\n",
+        "            audio_file = tts(input_text, model, voice, api_key, response_format, speed)\n",
         "            return audio_file\n",
         "\n",
         "        # Trigger the conversion when the submit button is clicked\n",
@@ -308,8 +331,9 @@
         "            outputs=output_audio,\n",
         "        )\n",
         "\n",
-        "    # Launch the Gradio app\n",
-        "    demo.launch(show_error=True, debug=True, share=True)\n",
+        "    # Launch the Gradio app with error display enabled\n",
+        "    demo.launch(show_error=True)\n",
+        "\n",
         "\n",
         "if __name__ == \"__main__\":\n",
         "    main()"
