--- a/notebooks/openai-text-to-speech.ipynb
+++ b/notebooks/openai-text-to-speech.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOFv/YqcStyjM645Csx8ya1",
+      "authorship_tag": "ABX9TyORQHfFrdk42IYwVCj3qbIf",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -40,12 +40,15 @@
         "# @markdown <br />\n",
         "# @markdown <center> <h1>OpenAI</h1></center>\n",
         "# @markdown <center> <h2>Text to Speech</h2></center>\n",
-        "%pip install --upgrade --quiet --progress-bar=off gradio openai\n",
+        "%pip install --upgrade --quiet --progress-bar=off gradio openai requests\n",
+        "\n",
+        "import os\n",
+        "import tempfile\n",
+        "from functools import partial\n",
         "\n",
         "import gradio as gr\n",
-        "import tempfile\n",
         "import openai\n",
-        "from functools import partial\n",
+        "import requests\n",
         "\n",
         "def tts(\n",
         "    input_text: str,\n",
