--- a/docs/design-document/Final_Project_Team_3_Deliverable_1.tex
+++ b/docs/design-document/Final_Project_Team_3_Deliverable_1.tex
@@ -128,11 +128,9 @@
         \vspace{24pt}
 
         {
-            \begin{center}
-                \begin{tabular*}{\textwidth}{@{\extracolsep{\fill}}c c c}
-                    {\LARGE Jonathan Agustin} & {\LARGE Zack Robertson} & {\LARGE Lisa Vo}
-                \end{tabular*}
-            \end{center}
+            \begin{tabular*}{\textwidth}{@{\extracolsep{\fill}}c c c}
+                {\LARGE Jonathan Agustin} & {\LARGE \hfill Zack Robertson \hfill} & {\LARGE Lisa Vo}
+            \end{tabular*}
         }
     }
 }
