--- a/docs/design-document/Final_Project_Team_3_Deliverable_1.tex
+++ b/docs/design-document/Final_Project_Team_3_Deliverable_1.tex
@@ -128,8 +128,8 @@
         \vspace{24pt}
 
         {
-            \begin{tabular*}{\textwidth}{@{\extracolsep{\fill}}c c c}
-                {\LARGE Jonathan Agustin} & {\LARGE \hfill Zack Robertson \hfill} & {\LARGE Lisa Vo}
+            \begin{tabular*}{\textwidth}{@{\extracolsep{\fill}}l c r}
+                {\LARGE Jonathan Agustin} & {\LARGE Zack Robertson} & {\LARGE Lisa Vo}
             \end{tabular*}
         }
     }
