--- a/docs/design-document/Final_Project_Team_3_Deliverable_1.tex
+++ b/docs/design-document/Final_Project_Team_3_Deliverable_1.tex
@@ -102,38 +102,39 @@
     \newpage
 }
 
-{
-    \mytitlepage{}{
-        \centering
-        \fontfamily{phv}
+\mytitlepage{}{
+    \centering
+    \fontfamily{phv}
 
-        \vspace{-200pt} % move title up
+    \vspace{-200pt} % move title up
 
-        {
-            \Huge
-            \bfseries
-            Diabetic Readmission Risk Prediction
-            \par
-        }
+    {
+        \Huge
+        \bfseries
+        Diabetic Readmission Risk Prediction
+        \par
+    }
 
-        \vspace{8pt}
+    \vspace{8pt}
 
-        {
-            \Large
-            \bfseries
-            Design Document
-            \par
-        }
+    {
+        \Large
+        \bfseries
+        Design Document
+        \par
+    }
 
-        \vspace{24pt}
+    \vspace{24pt}
 
-        {
-            \begin{tabular*}{\textwidth}{@{\extracolsep{\fill}}c c c}
-                {\LARGE Jonathan Agustin} & {\LARGE \hfill Zack Robertson \hfill} & {\LARGE Lisa Vo}
-            \end{tabular*}
-        }
+    % Add horizontal offset with hspace
+    \hspace{-1.5cm} % Change the value to control horizontal offset
+    {
+        \LARGE
+        Jonathan Agustin \hspace{1cm} Zack Robertson \hspace{1.2cm} Lisa Vo
+        \par
     }
 }
+
 
 \newpage
 \tableofcontents
